create api project

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ Cargo.lock
 
 diesel.toml
 
-.env
+**/.env
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
