--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Cargo.lock
 diesel.toml
 
 **/.env
+.env
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
